--- a/Changes
+++ b/Changes
@@ -1,6 +1,8 @@
 Revision history for CLI-Driver
 
-0.02 - fixed PREREQ_PM for YAML::Tiny
+0.30 - added feature to detect extraneous args (and die with message)
 
-0.01 - first version    
+0.20 - fixed PREREQ_PM for YAML::Tiny
+
+0.01 - first version 
 
