--- a/Changes
+++ b/Changes
@@ -1,5 +1,7 @@
 Revision history for CLI-Driver
 
+0.63 - converted yaml sorting to use nsort from Util::Medley
+
 0.62 - fixed yaml sorting issue
 
 0.61 - added clidriver.pl utility 
