--- a/Changes
+++ b/Changes
@@ -1,5 +1,7 @@
 Revision history for CLI-Driver
 
+0.66 - fixed #129062: Undeclared dependency on namespace::autoclean
+
 0.65 - added feature to allow invocation through a hash of values rather
        than @ARGV
        
