--- a/Changes
+++ b/Changes
@@ -1,5 +1,7 @@
 Revision history for CLI-Driver
 
+0.76 - minor change to usage output
+
 0.75 - fixed minor bug in lib/CLI/Driver.pm
 
 0.74 - Switched to YAML::Syck for speed.
